--- a/sequences.html
+++ b/sequences.html
@@ -32,6 +32,7 @@
             border-radius: 15px;
             padding: 30px;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
 
         h1 {
@@ -385,11 +386,42 @@
                 margin-bottom: 5px;
             }
         }
+
+        .nav-top-btns {
+            position: absolute;
+            top: 18px;
+            left: 18px;
+            z-index: 10;
+            display: flex;
+            gap: 10px;
+        }
+
+        .nav-top-btns a {
+            background: linear-gradient(135deg, #007bff, #0056b3);
+            color: white;
+            text-decoration: none;
+            padding: 8px 16px;
+            border-radius: 8px;
+            font-weight: bold;
+            font-size: 1em;
+            transition: background 0.2s, transform 0.2s;
+            box-shadow: 0 2px 8px rgba(0, 123, 255, 0.08);
+        }
+
+        .nav-top-btns a:hover {
+            background: linear-gradient(135deg, #0056b3, #007bff);
+            transform: translateY(-2px) scale(1.03);
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
+        <div class="nav-top-btns">
+            <a href="index.html">🏠 Accueil</a>
+            <a href="upgma.html">UPGMA calculator</a>
+        </div>
+
         <h1>🧬 Analyseur de Séquences ADN - BIO109</h1>
 
         <div class="input-section">
